<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/tv_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tasks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@id/ed_add_task"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_greeting"
        app:layout_constraintVertical_bias="0">

    </androidx.recyclerview.widget.RecyclerView>

    <EditText
        android:id="@+id/ed_add_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_write_task"
        app:layout_constraintBottom_toTopOf="@id/ed_find_task"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_add_task" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="@string/add_task"
        app:layout_constraintBottom_toTopOf="@id/btn_find_task"
        app:layout_constraintEnd_toEndOf="@+id/btn_find_task"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btn_find_task" />

    <EditText
        android:id="@+id/ed_find_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_find_task"
        app:layout_constraintBottom_toTopOf="@id/btn_sign_out"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_find_task" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_find_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/find_task"
        app:layout_constraintBottom_toTopOf="@id/btn_sign_out"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintLeft_toRightOf="@id/btn_find_task"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/sign_out"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
